# Cardiac_electrophysiology_test

./: CMakeLists.txt  Ca_i.csv  EMcomping.h  EMcomping.py  EMcomping.ufl  GPB.cpp  GPB.h  GPBTissueManager.h  GPB_cell_model.cpp  GPB_cell_model.h  README.md  V_t.csv  Vm_tissue.csv  gpb_cell.h  main.cpp  plot_cell.py  plot_tissue.py  test.cpp
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  gpb_CN_output.csv  linear_electrostatic_solver
